--- a/Mezium.Web/wwwroot/css/site.css
+++ b/Mezium.Web/wwwroot/css/site.css
@@ -8,11 +8,7 @@ html {
   }
 }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
 }
